apps/workflows/overlays/codefreshoct7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: codefreshoct7-workflows-ingress
  namespace: codefreshoct7
spec:
  ingressClassName: nginx
  rules:
  - host: codefreshoct7.15.207.101.142.nip.io
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows(/|$)(.*)
        pathType: ImplementationSpecific
